# ffi4_avs

01/: CMakeLists.txt
01/src/: 01.c  02.c
02/: CMakeLists.txt
02/src/: 01.c
03/: CMakeLists.txt
03/src/: 01.c  math.h  math.x  math_client.c  math_server.c
